--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,7 @@ $base-font-size:   1.2rem;
 $base-font-weight: 300;
 $small-font-size:  $base-font-size * 0.875;
 $large-font-size:  $base-font-size * 1.475;
-$base-line-height: 1.6;
+$base-line-height: 1.4;
 
 $spacing-unit:      1rem;
 $base-padding:      2rem;
@@ -22,8 +22,8 @@ $background-color:  #000000;
 $link-color:        #ffffff;
 $light-color:       #fcfaf8;
 $dark-color:        #131314;
-$dark-color-light:  #96c1ff;
-$dark-color-dark:   #6e99d4;
+$blue-color:        #96c1ff;
+$blue-color-dark:   #6e99d4;
 $beige:             #e0c09f;
 $green: rgba(0, 161, 75, 0.6);
 $brown: rgba(140, 113, 93, 0.7);
