--- a/_includes/navbar_simple.html
+++ b/_includes/navbar_simple.html
@@ -1,5 +1,7 @@
-<ul class="nav navi text-center">
-    <li class="nav-item"><a  href="/#page-produkter" {% if page.url =="/#page-produkter" %} style="color:red;" {% endif %} >Produkter</a></li>
-    <li class="nav-item"><a  href="/braattveta" {% if page.url =="/braattveta" %} style="color: red;"{% endif %} >Bra att veta</a></li>
-    <li class="nav-item"><a  href="/fi">Suomeksi</a></li>
-</ul>
+<nav>
+    <ul class="navi">
+        <li class="nav-item"><a  href="/#page-produkter">Produkter</a></li>
+        <li class="nav-item"><a  href="/braattveta">Bra att veta</a></li>
+        <li class="nav-item"><a  href="/fi">Suomeksi</a></li>
+    </ul>
+</nav>
