--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -22,7 +22,7 @@ body {
   font-feature-settings: "kern" 1;
   font-kerning: normal;
   -ms-overflow-style: scrollbar;
-  background: url('../img/bgs/trappa.jpg')  no-repeat center center fixed;
+  background: url('../img/bgs/landscape.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -30,7 +30,7 @@ body {
 }
 
 body#page-1 {
-  background: url('../img/bgs/nightsky.jpg')  no-repeat center center fixed;
+  background: url('../img/bgs/kiss.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -38,14 +38,14 @@ body#page-1 {
 
 }
 body#page-10 {
-  background: url('../img/bgs/maneter.jpg')  no-repeat center center fixed;
+  background: url('../img/bgs/maneter.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
 body#page-22 {
-  background: url('../img/bgs/water.jpg')  no-repeat center center fixed;
+  background: url('../img/bgs/kaktus.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -57,9 +57,15 @@ body#page-23 {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  article h2.faktarutarubrik {
+    color: #FFCB05;
+  }
+  hr.primary {
+    border-top: 1px solid #FFCB05;
+  }
 }
 body#page-24 {
-  background: url('../img/bgs/pojke.jpg')  no-repeat center center fixed;
+  background: url('../img/bgs/choko.jpg')  no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -79,8 +85,15 @@ body#page-26 {
   -o-background-size: cover;
   background-size: cover;
 }
+body#page-31 {
+  background: url('../img/bgs/water.jpg')  no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 body#page-44 {
-  background: url('../img/bgs/trappa2.jpg')  no-repeat center center fixed;
+  background: url('../img/bgs/nightsky.jpg')  no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -135,7 +148,7 @@ img {
 
   header.site-header {
     z-index: 4;
-    width: 10%;
+    width: 11%;
     padding-left: 1rem;
     padding-right: 1rem;
     background-color: rgba(0, 0, 0, 0.4);
@@ -143,6 +156,9 @@ img {
     position: sticky;
     top: 0;
     height: 100vh;
+    @media (max-width: $tablet) {
+      width: 15%;
+    }
 
     @media (max-width: $mobile) {
       width: 100%;
@@ -206,7 +222,7 @@ li.active a {
 }
 
 li {
-  color: $text-color;
+  color: $light-color;
   font-size: $base-font-size;
 }
 
@@ -226,10 +242,11 @@ h2 {
   font-style: normal;
   font-weight: 400;
   font-size: 3rem;
+  line-height:3.1rem;
   letter-spacing: 4px;
   color: $link-color;
   text-transform: uppercase;
-  margin-bottom: 0;
+  margin-bottom: 1rem;
 }
 
 
@@ -257,14 +274,8 @@ hr.primary {
   margin-right: auto;
 }
 
-.faktarutarubrik {
-  font-family: flood-std, sans-serif;
-  letter-spacing: 0;
-  margin-bottom: 1.5rem;
-}
-
 hr.primary, hr.light, hr.dark {
-  margin: 0 auto 1rem auto;
+  margin: 0 auto 2rem auto;
   border-bottom: none;
 }
 
@@ -335,84 +346,51 @@ button, .button {
 
 //* HEADER STYLES *//
 .site-header .wrapper {
-
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-
-    .logo img.logoimg {
-      max-width: 80px;
-      padding-top: $base-padding;
-      padding-bottom: $base-padding;
-      @media(max-width:$mobile) {
-        padding-bottom: 0;
-        max-width: 40px;
-      }
-    }
-    .logonamn img.logonamnimg {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  .logo img.logoimg {
+    max-width: 80px;
+    padding-top: $base-padding;
+    padding-bottom: $base-padding;
+    @media (max-width: $mobile) {
+      padding-bottom: 0;
+      padding-top: 0.8rem;
       max-width: 40px;
-      padding-bottom: $base-padding;
-      @media(max-width:$mobile) {
-          display: none;
-        }
-      }
-
+    }
+  }
+  .logonamn img.logonamnimg {
+    max-width: 40px;
+    padding-bottom: $base-padding;
+    @media (max-width: $mobile) {
+      display: none;
+    }
+  }
   a.namn {
     display: none;
-    @media(max-width:$mobile) {
+    @media (max-width: $mobile) {
       display: block;
     }
   }
 
-  ul.navi {
-    padding-top: $spacing-unit;
-    @media(max-width:$mobile) {
-      padding-top: $base-padding;
-    }
-  }
-}
+  //* NAV STYLES *//
 
-    //* NAV STYLES *//
-
-  ul.navi {
+  nav ul.navi {
     list-style-type: none;
+    text-align: center;
     margin: 0;
     padding: 0;
     overflow: hidden;
+    padding-top: $spacing-unit;
+    @media(max-width: $mobile) {
+      padding-top: $base-padding;
+    }
+    li.nav-item a {
+      font-size: $small-font-size;
+    }
   }
 
-  li a, .dropbtn {
-    text-align: center;
-    padding: 0 8px;
-    text-decoration: none;
-  }
-
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: $light-color;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 4;
-  }
-
-  .dropdown-content a {
-    color: $dark-color;
-    padding: 6px 8px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-
-  .dropdown-content a:hover {
-    background-color: #b1b1b1;
-  }
-
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-
-
+}
 
 //* BREADCRUMB STYLES *//
 
@@ -461,7 +439,7 @@ button, .button {
 }
 
  .sloganbox#sloganbox10 {
-    min-height:40vh;
+    min-height:50vh;
     h1.slogan {
       transform: rotate(-10deg);
       @media (max-width: $mobile) {
@@ -469,7 +447,7 @@ button, .button {
       }
     }
    @media (max-width:$tablet) {
-     min-height:30vh;
+     min-height:40vh;
    }
    @media (max-width: $mobile) {
      min-height:20vh;
@@ -477,7 +455,7 @@ button, .button {
   }
 
 .sloganbox#sloganboxindex {
-  min-height:50vh;
+  min-height:60vh;
   h1.slogan {
     transform: rotate(-10deg);
     @media (max-width: $mobile) {
@@ -489,9 +467,6 @@ button, .button {
 
 //* SECTION STYLES *//
 
-header h1 {
-  color: $link-color;
-}
 
 //* FLIP CARD STYLES *//
 
@@ -505,6 +480,29 @@ header h1 {
     justify-content: space-around;
   }
 }
+.produktkort-singel {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  padding-bottom: $base-padding;
+
+  .flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 300px;
+    .flip-card-front, .flip-card-back {
+      img {
+        max-width: 300px;
+      }
+    }
+    @media (max-width: $tablet) {
+      &.second {
+        display: none;
+      }
+    }
+  }
+}
+
 
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
@@ -661,12 +659,6 @@ header h1 {
   }
 
 
-  h1.pris, h2.pris{
-    font-family: "bebas-neue",sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    color: $link-color;
-  }
 
   .buy-box {
     border-left: 1px solid $blue;
@@ -681,11 +673,34 @@ header h1 {
 
   article {
     z-index: 5;
+    header h1 {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
     p.small {
       font-size: $small-font-size;
       line-height: 1.1rem;
       letter-spacing: 0;
     }
+    h2.om {
+      padding-top: $base-padding;
+    }
+    img.img-fluid.produktprofilbild {
+      max-width: 300px;
+    }
+    h2.pris{
+      font-family: "bebas-neue",sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      color: $link-color;
+    }
+    .faktarutarubrik {
+      font-family: flood-std, sans-serif;
+      letter-spacing: 0;
+      margin-bottom: 1.5rem;
+      padding-top: $base-padding;
+    }
+
   }
 
   ul.sidnavi {
@@ -728,11 +743,6 @@ header h1 {
       color: $blue-color;
       text-decortion: none;
     }
-  }
-
-  img.img-fluid.produktprofilbild {
-    max-width: 300px;
-    padding: $base-padding;
   }
 
 
@@ -835,7 +845,7 @@ footer {
       margin-bottom: 16px;
     }
 
-    h1, .hero h1, .buy-box h1 {
+    h1, .hero h1, .buy-box h1, h2.pris {
       font-size: 2rem;
       line-height: 2.4rem;
       margin-bottom: 0.5rem;
