--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -100,7 +100,7 @@ body#page-44 {
   background-size: cover;
 }
 body#page-45 {
-  background: url('../img/bgs/tunnel.jpg')  no-repeat center center fixed;
+  background: url('../img/bgs/boat.jpg')  no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
