--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,9 +22,9 @@
   <!-- Fonts -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-  <link rel="icon" type="image/png" href="{{ "/img/favicon.png" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" type="text/css" href="/js/snow.css">
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/favicon.png">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/js/snow.css">
 
   <!-- Javascripts -->
   <script src="https://use.typekit.net/shz0rmu.js"></script>
