--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
   <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/favicon.png">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/js/snow.css">
 
   <!-- Javascripts -->
@@ -32,4 +32,7 @@
   <script src="https://use.fontawesome.com/b70b2b3afb.js"></script>
   <script defer type="text/javascript" src="/js/jquery-1.12.0.min.js"></script>
   <script defer type="text/javascript" src="/js/snow.js"></script>
+
+  {% seo %}
+
 </head>
