--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,8 +30,8 @@
   <script src="https://use.typekit.net/shz0rmu.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
   <script src="https://use.fontawesome.com/b70b2b3afb.js"></script>
-  <script defer type="text/javascript" src="/js/jquery-1.12.0.min.js"></script>
-  <script defer type="text/javascript" src="/js/snow.js"></script>
+  <script defer type="text/javascript" src="js/jquery-1.12.0.min.js"></script>
+  <script defer type="text/javascript" src="js/snow.js"></script>
 
   {% seo %}
 
