--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,16 +22,16 @@
   <!-- Fonts -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-  <link rel="icon" type="image/png" href="img/favicon.png">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" type="text/css" href="js/snow.css">
+  <link rel="icon" type="image/png" href="/img/favicon.png">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/js/snow.css">
 
   <!-- Javascripts -->
   <script src="https://use.typekit.net/shz0rmu.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
   <script src="https://use.fontawesome.com/b70b2b3afb.js"></script>
-  <script defer type="text/javascript" src="js/jquery-1.12.0.min.js"></script>
-  <script defer type="text/javascript" src="js/snow.js"></script>
+  <script defer type="text/javascript" src="/js/jquery-1.12.0.min.js"></script>
+  <script defer type="text/javascript" src="/js/snow.js"></script>
 
   {% seo %}
 
