--- a/css/main.scss
+++ b/css/main.scss
@@ -36,6 +36,7 @@ $light-orange:      #fcbb76;
 $yellow: rgba(255, 203, 5, 0.8);
 $red: rgba(237, 28, 36, 0.75);
 $lightblue:         #90d7ec;
+$light-transparent: rgba(252, 250, 248, 0.71);
 
 
 // Use media queries like this:
