--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,10 +5,13 @@
           <h1 class="">CLEAN FOOD FOR HEALTHY SKIN</h1>
       </a>
       <div class="navi-footer">
-          <p class="tel"><a href="tel:0407642085">Siirto, Pivo, MobilePay + <br>
-            <i class="fa fa-phone"></i> 040 764 2085</a><br>
-          <a href="mailto:lotta.hardman@gmail.com?subject=Hej! Mitt ärende gäller DrHardmans produkter.">lotta.hardman@gmail.com</a>
-          </p>
+          <p class="tel">
+              <a href="mailto:lotta.hardman@gmail.com?subject=Hej! Mitt ärende gäller DrHardmans produkter.">lotta.hardman@gmail.com</a><br>
+              <a href="tel:0407642085"><i class="fa fa-phone"></i> 040 764 2085<br>
+              also for: Siirto, Pivo, MobilePay</a><br>
+              Bank: OKOYFIHH<br>
+              FI9855496620063937<br>
+              </p>
       </div>
 
   </div>
