--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,7 +17,7 @@ comments: true
     <a class="up" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
     </article>
 </main>
-<aside class="padding">
+<aside class="fb">
     <div
             class="fb-like"
             data-share="true"
