koostesivut initiated on front page

--- a/_includes/snowsettings.html
+++ b/_includes/snowsettings.html
@@ -1,7 +1,7 @@
 {% if page.tag  == "yellow" %}
 <script>
     document.addEventListener('DOMContentLoaded', function() {
-        new Snow('#sitewrapper' ,{
+        new Snow('#snow' ,{
             number:45,
             r: 4,
             v: 1.4,
@@ -14,7 +14,7 @@
 {% if page.tag  == "pink" %}
 <script>
     document.addEventListener('DOMContentLoaded', function() {
-        new Snow('#sitewrapper' ,{
+        new Snow('#snow' ,{
             number:45,
             r: 4,
             v: 1.4,
@@ -27,7 +27,7 @@
 {% if page.tag  == "blue" %}
 <script>
     document.addEventListener('DOMContentLoaded', function() {
-        new Snow('#sitewrapper' ,{
+        new Snow('#snow' ,{
             number:45,
             r: 4,
             v: 1.4,
@@ -43,8 +43,7 @@
         new Snow('#sitewrapper' ,{
             number:45,
             r: 4,
-            v: 1.4,
-            color: 'rgb(255,255,255)'
+            v: 1.4, color: 'rgb(255,255,255)',
         });
     });
 </script>
