--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,8 @@
           fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
   </script>
+  <div id="snow">
   {% include snowsettings.html %}
-
   <div id="sitewrapper">
     <a class="jumptarget" name="page-top" id="page-top"></a>
     {% include header.html %}
@@ -43,6 +43,7 @@
     </div> <!-- page content -->
   </div>
   {% include footer.html %}
+  </div><!-- snow -->
   </body>
 
 </html>
